# bonk.c

./: meson.build  readme.md
diary/: 1.md  2.md  6.md
include/: exchangeable.h  game.h  server.h
include/client/: game.h
src/: meson.build
src/client/: main.c  multiplayer.c  network.c  singleplayer.c  start_menu.c
src/server/: main.c  network.c
